[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrdm"
version = "0.1.5"
description = "GakuNin RDM閲覧パッケージ"
classifiers = [
    "Programming Language :: Python :: 3.12",
]
license = {text = "MIT"}
requires-python = "==3.12.*"
dependencies = []

[project.urls]
Repository = "https://github.com/takenoko9973/pygrdm.git"
